public/styles/styles.css
/* ... */
.middle-content-section.center {
  align-self: center
}

.hero-full-screen .middle-content-section {
  text-align: left;
  margin: 200px 20px 20px 0px;
  padding: 0;
  width: 70%;
  top: 50%;
  color: #fefefe;
  /* background-color: rgba(26, 29, 37, 0.781); */
}

.hero-full-screen .top-content-section {
  width: 100%;
}

.hero-full-screen .bottom-content-section {
  align-items: center;
  padding: 1rem;
}

.hero-full-screen .bottom-content-section svg {
  height: 3.75rem;
  width: 3.75rem;
  fill: #fefefe;
}

.four-slider svg {
  height: 3.75rem;
  width: 3.75rem;
  fill: #fefefe;
}

.hero-full-screen .top-bar {
  background: transparent;
}

.hero-full-screen .top-bar .menu {
  background: transparent;
}

.hero-full-screen .top-bar .menu-text {
  color: #fefefe;
}

.hero-full-screen .top-bar .menu li {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
}

.hero-full-screen .top-bar .menu a {
  color: #fefefe;
  font-weight: bold;
}

#scrollButton {
  position: absolute;
  bottom: 0;
  width: 50%;
  margin: 0;
  padding: 0;
right: 0;
}

#home {
  height: 100vh;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: url("/images/introimg.jpg") center center no-repeat;
  background-color: black;
  background-size: cover;
}

#bg {
  height: 100vh;
  background-color: black;
  background: url("") center center no-repeat;
  background-size: cover;
  z-index: -1;
}

/* CSS for the main section of the home page */

/* #h1 {
  font-family: oswald;
} */

html,
body {
  height: 100%;
  padding: 0;
  margin: 0;
}
body {
  font-size: 35px;
  background: black;
  font-family: Georgia, 'Times New Roman', Times, serif;
}

h1, h2 {
  margin-left: 25px;
}
#input {
  margin-left: 25px;
  padding-left: 20px;
}
/* change padding to margin */


.js-transitions-disabled * {
  transition: none !important;
}
.carousel {
  position: relative;
  height: 100%;
  overflow: hidden;
  -webkit-perspective: 50vw;
          perspective: 50vw;
  -webkit-perspective-origin: 50% 50%;
          perspective-origin: 50% 50%;
}
.carousel__control {
  position: absolute;
  height: 160px;
  width: 40px;
  border: gray 1px dotted;
  /* background:black; */
  background:white;
  right: 0;
  top: 0;
  bottom: 0;
  margin: auto;
  z-index: 1;
}
.carousel__control a {
  position: relative;
  display: block;
  width: 100%;
  padding-top: 75%;
  box-sizing: border-box;
}
.carousel__control a:hover:before {
  background-color: gray;
}
.carousel__control a.active:before,
.carousel__control a.active:hover:before {
  background-color: #1779ba;
}
.carousel__control a:first-child {
  margin-top: 15px;
}
.carousel__control a:before {
  position: absolute;
  top: 50%;
  left: 0;
  right: 0;
  margin: auto;
  border-radius: 50%;
  padding-top: 25%;
  width: 25%;
  background: gray;
  content: '';
  display: block;
  margin-top: -12.5%;
}
.carousel__stage {
  position: absolute;
  top: 20px;
  bottom: 20px;
  left: 20px;
  right: 20px;
  margin: auto;
  -webkit-transform-style: preserve-3d;
          transform-style: preserve-3d;
  -webkit-transform: translateZ(calc(-50vh + 20px));
          transform: translateZ(calc(-50vh + 20px));
}
.spinner {
  position: absolute;
  width: calc(50vw - (20px));
  height: calc(100vh - 40px);
  top: 0;
  left: 0;
  right: auto;
  bottom: 0;
  margin: auto;
  -webkit-transform-style: preserve-3d;
          transform-style: preserve-3d;
  transition: -webkit-transform 1s;
  transition: transform 1s;
  transition: transform 1s, -webkit-transform 1s;
  -webkit-backface-visibility: hidden;
          backface-visibility: hidden;
  -webkit-transform-origin: 50% 50%;
          transform-origin: 50% 50%;
  -webkit-transform: rotateX(0);
          transform: rotateX(0);
}
.js-spin-fwd .spinner {
  -webkit-transform: rotateX(-90deg);
          transform: rotateX(-90deg);
}
.js-spin-bwd .spinner {
  -webkit-transform: rotateX(90deg);
          transform: rotateX(90deg);
}
.js-spin-fwd .spinner--right {
  -webkit-transform: rotateX(90deg);
          transform: rotateX(90deg);
}
.js-spin-bwd .spinner--right {
  -webkit-transform: rotateX(-90deg);
          transform: rotateX(-90deg);
}
.spinner--right {
  right: 0;
  left: auto;
}
.spinner__face {
  display: none;
  position: absolute;
  width: 100%;
  height: 100%;
  overflow: hidden;
}
.spinner__face.js-next {
  display: block;
  -webkit-transform: rotateX(90deg) translateZ(calc(50vh - 20px));
          transform: rotateX(90deg) translateZ(calc(50vh - 20px));
}
.spinner--right .spinner__face.js-next {
  -webkit-transform: rotateX(270deg) translateZ(calc(50vh - 20px));
          transform: rotateX(270deg) translateZ(calc(50vh - 20px));
}
.js-spin-bwd .spinner__face.js-next {
  -webkit-transform: rotateX(-90deg) translateZ(calc(50vh - 20px));
          transform: rotateX(-90deg) translateZ(calc(50vh - 20px));
}
.js-spin-bwd .spinner--right .spinner__face.js-next {
  -webkit-transform: rotateX(-270deg) translateZ(calc(50vh - 20px));
          transform: rotateX(-270deg) translateZ(calc(50vh - 20px));
}
.js-active {
  display: block;
  -webkit-transform: translateZ(calc(50vh - 20px));
          transform: translateZ(calc(50vh - 20px));
}
.content {
  position: absolute;
  width: 200%;
  height: 100%;
  left: 0;
}
.spinner--right .content {
  left: -100%;
}
.content__left,
.content__right {
  position: absolute;
  left: 0;
  top: 0;
  width: 50%;
  height: 100%;
}
.content__right {
  right: 0;
  left: auto;
}
.content__left {
  background-repeat: no-repeat;
  background-size: cover;
}
.content__left:after {
  position: absolute;
  display: block;
  content: "";
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.1);
}
/* ... */

